--- a/public/t2a19-move-background-aden.html
+++ b/public/t2a19-move-background-aden.html
@@ -7,8 +7,8 @@
     <style>
         body {
             background-repeat: repeat;
-            background-size: cover; /* Adjusted to 'cover' for full background */
-            background-image: url('https://i.ibb.co/Zf7hHsh/OIP.jpg'); /* Set the image as background */
+            background-size: cover; /* Ensures the background covers the entire body */
+            background-image: url('https://i.ibb.co/yXNJrzG/1247160.jpg'); /* Updated background image */
         }
         #myImage01 {
             position: relative; 
@@ -16,7 +16,7 @@
             height: 80px; 
             top: 0px; 
             left: 0px; 
-            z-index: 10; /* Ensure the image appears above the background */
+            z-index: 10; /* Keeps the image above the background */
         }
     </style>
 </head>
@@ -51,7 +51,7 @@
     }
 </script>
 
-<h1 align="center">t2a19-move-background-fred.html</h1>
+<h1 align="center">Move Background and Image</h1>
 
 <!-- Button to move the background left -->
 <input id="myButton01" type="button" value="Background Move Left" onclick="moveBackgroundLeft()">
@@ -101,6 +101,6 @@
 }">
 
 <!-- Image element with specified source -->
-<img id="myImage01" src="https://i.ibb.co/Zf7hHsh/OIP.jpg" alt="OIP">
+<img id="myImage01" src="https://i.ibb.co/yXNJrzG/1247160.jpg" alt="1247160">
 </body>
 </html>
