--- a/public/t2a19-move-background-aden.html
+++ b/public/t2a19-move-background-aden.html
@@ -100,7 +100,7 @@
     myClock03 = setInterval(moveImageRight, 30);
 }">
 
-<!-- Image element with specified source -->
-<img id="myImage01" src="https://i.ibb.co/yXNJrzG/1247160.jpg" alt="1247160">
+<!-- Image element with the old specified source -->
+<img id="myImage01" src="https://i.ibb.co/Zf7hHsh/OIP.jpg" alt="OIP">
 </body>
 </html>
