--- a/public/t2a19-move-background-aden.html
+++ b/public/t2a19-move-background-aden.html
@@ -6,12 +6,14 @@
     <title>Move Background and Image</title>
     <style>
         body {
-            background-repeat: repeat;
-            background-size: cover;
+            background-repeat: no-repeat;  /* Prevents the background image from repeating */
+            background-size: cover;         /* Ensures the background covers the entire body */
             background-image: url('https://i.ibb.co/yXNJrzG/1247160.jpg');
             text-align: center;
             font-family: Arial, sans-serif;
             padding: 20px;
+            height: 100vh;                /* Makes body full height of the viewport */
+            overflow: hidden;             /* Prevents scrollbar from appearing */
         }
         #myImage01 {
             position: relative; 
