--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -14,13 +14,14 @@
             padding: 20px;
             height: 100vh;                /* Makes body full height of the viewport */
             overflow: hidden;             /* Prevents scrollbar from appearing */
+            color: white;                 /* Sets general text color to white */
         }
         #myImage01 {
             position: absolute; 
             width: 100px; 
             height: 80px; 
             z-index: 10; 
-            top: 200px;  /* Adjust this value as needed */
+            top: 200px;  /* Initial top position for the image */
             left: 0;  /* Initial left position for the image */
         }
         .button-section {
@@ -196,8 +197,14 @@
         imgSpeedDown = Math.max(10, imgSpeedDown - 30);
         imgClock05 = setInterval(moveImageDown, imgSpeedDown);
     }">Auto Image Down Faster</button>
-    <!-- Image Element moved below the last button -->
-    <img id="myImage01" src="https://i.ibb.co/Zf7hHsh/OIP.jpg" alt="OIP">
+    <button onclick="{
+        clearInterval(imgClock05);
+        imgSpeedDown += 30;
+        imgClock05 = setInterval(moveImageDown, imgSpeedDown);
+    }">Auto Image Down Slower</button>
 </div>
+
+<!-- Image Element -->
+<img id="myImage01" src="https://i.ibb.co/Zf7hHsh/OIP.jpg" alt="OIP">
 </body>
 </html>
