--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -40,7 +40,11 @@
     let myGlobalX = 0; // Global variable for background horizontal position
     let myGlobalY = 0; // Global variable for background vertical position
     let imgGlobalX = 0; // Global variable for image horizontal position
-    let imgGlobalY = 0; // Global variable for image vertical position
+    let imgGlobalY = 200; // Global variable for image vertical position (original position)
+    const originalBackgroundX = 0; // Original horizontal position for the background
+    const originalBackgroundY = 0; // Original vertical position for the background
+    const originalImageX = 0; // Original horizontal position for the image
+    const originalImageY = 200; // Original vertical position for the image
     let myClock01, myClock02, myClock03, myClock04, myClock05, imgClock01, imgClock02, imgClock04, imgClock05; // Timers
     let mySpeed01 = 400, mySpeed02 = 400, mySpeedUp = 400, mySpeedDown = 400; // Background speeds
     let imgSpeedLeft = 400, imgSpeedRight = 400, imgSpeedUp = 400, imgSpeedDown = 400; // Image speeds
@@ -95,6 +99,17 @@
         const imgElement = document.getElementById('myImage01');
         imgElement.style.left = `${imgGlobalX}px`;
         imgElement.style.top = `${imgGlobalY}px`;
+    }
+
+    // Reset function
+    function resetPositions() {
+        myGlobalX = originalBackgroundX;
+        myGlobalY = originalBackgroundY;
+        imgGlobalX = originalImageX;
+        imgGlobalY = originalImageY;
+        
+        updateBackgroundPosition();
+        updateImagePosition();
     }
 
 </script>
@@ -202,6 +217,11 @@
         imgSpeedDown += 30;
         imgClock05 = setInterval(moveImageDown, imgSpeedDown);
     }">Auto Image Down Slower</button>
+</div>
+
+<!-- Reset Button -->
+<div class="button-section">
+    <button onclick="resetPositions()">Reset Positions</button>
 </div>
 
 <!-- Image Element -->
