--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -6,15 +6,15 @@
     <title>Move Background and Image</title>
     <style>
         body {
-            background-repeat: no-repeat;  /* Prevents the background image from repeating */
-            background-size: cover;         /* Ensures the background covers the entire body */
+            background-repeat: repeat;      /* Allow the background image to repeat */
+            background-size: auto;          /* Use auto for the background size to keep it repeating */
             background-image: url('https://i.ibb.co/yXNJrzG/1247160.jpg');
             text-align: center;
             font-family: Arial, sans-serif;
             padding: 20px;
-            height: 100vh;                /* Makes body full height of the viewport */
-            overflow: hidden;             /* Prevents scrollbar from appearing */
-            color: white;                 /* Sets general text color to white */
+            height: 100vh;                 /* Makes body full height of the viewport */
+            overflow: hidden;              /* Prevents scrollbar from appearing */
+            color: white;                  /* Sets general text color to white */
         }
         #myImage01 {
             position: absolute; 
