--- a/public/index.html
+++ b/public/index.html
@@ -94,3 +94,5 @@ Aden
 </html>
     <li><a href="Testing-page.html">Testing-page.html</a></li> 
         <li><a href="Testing-page-random.html">Testing-page-random.html</a></li>
+
+      <li><a href="https://github.com/hpssjellis/high-school-javascript-game-dev-assignment-images?tab=readme-ov-file">assignment-images</a></li>
