--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,7 @@ Aden
        <li><a href="t1a17-move-Aden.html">t1a17-move-Aden.html</a></li>
         <li><a href="t1a18-classes-Aden.html">t1a18-classes-Aden.html</a></li>
          <li><a href="t2a19-move-background-aden.html">t2a19-move-background-aden.html</a></li>
+       <li><a href="t2a20-spy-Aden.html">t2a20-spy-Aden.html</a></li>
     </ul>
 
     <h2>X Assignments</h2>
