--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -3,298 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Move Background and Image</title>
+    <title>Spy Name Encryptor</title>
     <style>
         body {
-            background-repeat: repeat;      /* Allow the background image to repeat */
-            background-size: auto;          /* Use auto for the background size to keep it repeating */
-            background-image: url('https://i.ibb.co/yXNJrzG/1247160.jpg');
-            text-align: center;
             font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background-color: #f9f9f9;
+            margin: 0;
             padding: 20px;
-            height: 100vh;                 /* Makes body full height of the viewport */
-            overflow: hidden;              /* Prevents scrollbar from appearing */
-            color: white;                  /* Sets general text color to white */
         }
-        #myImage01 {
-            position: absolute; 
-            width: 100px; 
-            height: 80px; 
-            z-index: 10; 
-            top: 200px;  /* Initial top position for the image */
-            left: 0;  /* Initial left position for the image */
+        h1 {
+            color: #333;
         }
-        .button-section {
-            margin: 20px 0;
+        textarea {
+            margin: 10px 0;
+            width: 90%;
+            max-width: 600px;
+            height: 80px;
+            font-size: 16px;
+            padding: 5px;
         }
-        button {
-            margin: 5px;
+        input[type=button] {
             padding: 10px 15px;
             font-size: 16px;
+            margin: 5px;
             cursor: pointer;
+        }
+        input[type=button]:hover {
+            background-color: #007BFF;
+            color: white;
+        }
+        .container {
+            max-width: 600px;
+            width: 100%;
+            margin: auto;
         }
     </style>
 </head>
-<body id="myBody">
+<body>
+
+<div class="container">
+    <h1 align="center">t2a20-spy-name.html</h1>
+    
+    <textarea id="myArea01" placeholder="Enter your text here...">Hello how are you</textarea><br>
+
+    <input type="button" value="Encrypt" onclick="encryptText()"><br><br>
+
+    <textarea id="myArea02" placeholder="Your encrypted text will appear here..."></textarea><br>
+
+    <input type="button" value="Decrypt" onclick="decryptText()"><br><br>
+
+    <textarea id="myArea03" placeholder="Your decrypted text will appear here..."></textarea><br>
+</div>
+
 <script>
-    let myGlobalX = 0; // Global variable for background horizontal position
-    let myGlobalY = 0; // Global variable for background vertical position
-    let imgGlobalX = 0; // Global variable for image horizontal position
-    let imgGlobalY = 200; // Global variable for image vertical position (original position)
-
-    // Original positions
-    const originalBackgroundX = 0; // Original horizontal position for the background
-    const originalBackgroundY = 0; // Original vertical position for the background
-    const originalImageX = 0; // Original horizontal position for the image
-    const originalImageY = 200; // Original vertical position for the image
-
-    // Timer variables
-    let myClock01, myClock02, myClock03, myClock04, myClock05, imgClock01, imgClock02, imgClock04, imgClock05; 
-    let mySpeed01 = 400, mySpeed02 = 400, mySpeedUp = 400, mySpeedDown = 400; // Background speeds
-    let imgSpeedLeft = 400, imgSpeedRight = 400, imgSpeedUp = 400, imgSpeedDown = 400; // Image speeds
-
-    // Control state
-    let controlMode = 'image'; // Start with the image being controlled
-
-    // Background movement functions
-    function moveBackgroundLeft() {
-        myGlobalX -= 5;
-        updateBackgroundPosition();
-    }
-
-    function moveBackgroundRight() {
-        myGlobalX += 5;
-        updateBackgroundPosition();
-    }
-
-    function moveBackgroundUp() {
-        myGlobalY -= 5;
-        updateBackgroundPosition();
-    }
-
-    function moveBackgroundDown() {
-        myGlobalY += 5;
-        updateBackgroundPosition();
-    }
-
-    function updateBackgroundPosition() {
-        document.getElementById('myBody').style.backgroundPosition = `${myGlobalX}px ${myGlobalY}px`;
-    }
-
-    // Image movement functions
-    function moveImageLeft() {
-        imgGlobalX -= 5;
-        updateImagePosition();
-    }
-
-    function moveImageRight() {
-        imgGlobalX += 5;
-        updateImagePosition();
-    }
-
-    function moveImageUp() {
-        imgGlobalY -= 5;
-        updateImagePosition();
-    }
-
-    function moveImageDown() {
-        imgGlobalY += 5;
-        updateImagePosition();
-    }
-
-    function updateImagePosition() {
-        const imgElement = document.getElementById('myImage01');
-        imgElement.style.left = `${imgGlobalX}px`;
-        imgElement.style.top = `${imgGlobalY}px`;
-    }
-
-    // Clear all intervals
-    function clearAllIntervals() {
-        clearInterval(myClock01);
-        clearInterval(myClock02);
-        clearInterval(myClock03);
-        clearInterval(myClock04);
-        clearInterval(myClock05);
-        clearInterval(imgClock01);
-        clearInterval(imgClock02);
-        clearInterval(imgClock04);
-        clearInterval(imgClock05);
-    }
-
-    // Reset function
-    function resetPositions() {
-        clearAllIntervals();  // Stop any auto movement
-
-        myGlobalX = originalBackgroundX;
-        myGlobalY = originalBackgroundY;
-        imgGlobalX = originalImageX;
-        imgGlobalY = originalImageY;
-
-        updateBackgroundPosition();
-        updateImagePosition();
-    }
-
-    // Switch control between the image and background
-    function toggleControl() {
-        controlMode = controlMode === 'image' ? 'background' : 'image';
-        const controlLabel = document.getElementById('controlLabel');
-        controlLabel.textContent = `Control Mode: ${controlMode.charAt(0).toUpperCase() + controlMode.slice(1)}`;
-    }
-
-    // Keydown event handler for arrow keys
-    document.addEventListener('keydown', function(event) {
-        if (controlMode === 'image') {
-            switch(event.key) {
-                case 'ArrowLeft':
-                    moveImageLeft();
-                    break;
-                case 'ArrowRight':
-                    moveImageRight();
-                    break;
-                case 'ArrowUp':
-                    moveImageUp();
-                    break;
-                case 'ArrowDown':
-                    moveImageDown();
-                    break;
+    function encryptText() {
+        let myTemp = '';
+        let myString = document.getElementById('myArea01').value.toLowerCase().split('');
+        for (let myLoop = 0; myLoop < myString.length; myLoop++) {
+            myTemp = myString[myLoop];
+            if (myString[myLoop] === 'e') {
+                myTemp = 'f';
+            } else if (myString[myLoop] === 'h') {
+                myTemp = 'i';
             }
-        } else if (controlMode === 'background') {
-            switch(event.key) {
-                case 'ArrowLeft':
-                    moveBackgroundLeft();
-                    break;
-                case 'ArrowRight':
-                    moveBackgroundRight();
-                    break;
-                case 'ArrowUp':
-                    moveBackgroundUp();
-                    break;
-                case 'ArrowDown':
-                    moveBackgroundDown();
-                    break;
-            }
+            myString[myLoop] = myTemp;
         }
-    });
+        document.getElementById('myArea02').value = myString.join('');
+    }
 
+    function decryptText() {
+        alert('Sorry, you have to do this!');
+        // Add decryption logic here
+    }
 </script>
 
-<h1>Move Background and Image</h1>
-
-<!-- Control Toggle Section -->
-<div class="button-section">
-    <button onclick="toggleControl()">Toggle Control (Image/Background)</button>
-    <p id="controlLabel">Control Mode: Image</p>
-</div>
-
-<!-- Horizontal Movement Section -->
-<div class="button-section">
-    <h2>Horizontal Movement</h2>
-    <button onclick="moveBackgroundLeft()">Move Background Left</button>
-    <button onclick="moveBackgroundRight()">Move Background Right</button>
-    <button onclick="{
-        clearInterval(myClock01);
-        mySpeed01 = Math.max(10, mySpeed01 - 30);
-        myClock01 = setInterval(moveBackgroundLeft, mySpeed01);
-    }">Auto Background Left Faster</button>
-    <button onclick="{
-        clearInterval(myClock01);
-        mySpeed01 += 30;
-        myClock01 = setInterval(moveBackgroundLeft, mySpeed01);
-    }">Auto Background Left Slower</button>
-    <button onclick="{
-        clearInterval(myClock02);
-        mySpeed02 = Math.max(10, mySpeed02 - 30);
-        myClock02 = setInterval(moveBackgroundRight, mySpeed02);
-    }">Auto Background Right Faster</button>
-    <button onclick="{
-        clearInterval(myClock02);
-        mySpeed02 += 30;
-        myClock02 = setInterval(moveBackgroundRight, mySpeed02);
-    }">Auto Background Right Slower</button>
-</div>
-
-<!-- Vertical Movement Section -->
-<div class="button-section">
-    <h2>Vertical Movement</h2>
-    <button onclick="moveBackgroundUp()">Move Background Up</button>
-    <button onclick="{
-        clearInterval(myClock04);
-        mySpeedUp = Math.max(10, mySpeedUp - 30);
-        myClock04 = setInterval(moveBackgroundUp, mySpeedUp);
-    }">Auto Background Up Faster</button>
-    <button onclick="{
-        clearInterval(myClock04);
-        mySpeedUp += 30;
-        myClock04 = setInterval(moveBackgroundUp, mySpeedUp);
-    }">Auto Background Up Slower</button>
-    <button onclick="moveBackgroundDown()">Move Background Down</button>
-    <button onclick="{
-        clearInterval(myClock05);
-        mySpeedDown = Math.max(10, mySpeedDown - 30);
-        myClock05 = setInterval(moveBackgroundDown, mySpeedDown);
-    }">Auto Background Down Faster</button>
-    <button onclick="{
-        clearInterval(myClock05);
-        mySpeedDown += 30;
-        myClock05 = setInterval(moveBackgroundDown, mySpeedDown);
-    }">Auto Background Down Slower</button>
-</div>
-
-<!-- Image Movement Section -->
-<div class="button-section">
-    <h2>Image Movement</h2>
-    <button onclick="moveImageLeft()">Move Image Left</button>
-    <button onclick="moveImageRight()">Move Image Right</button>
-    <button onclick="{
-        clearInterval(imgClock01);
-        imgSpeedLeft = Math.max(10, imgSpeedLeft - 30);
-        imgClock01 = setInterval(moveImageLeft, imgSpeedLeft);
-    }">Auto Image Left Faster</button>
-    <button onclick="{
-        clearInterval(imgClock01);
-        imgSpeedLeft += 30;
-        imgClock01 = setInterval(moveImageLeft, imgSpeedLeft);
-    }">Auto Image Left Slower</button>
-    <button onclick="{
-        clearInterval(imgClock02);
-        imgSpeedRight = Math.max(10, imgSpeedRight - 30);
-        imgClock02 = setInterval(moveImageRight, imgSpeedRight);
-    }">Auto Image Right Faster</button>
-    <button onclick="{
-        clearInterval(imgClock02);
-        imgSpeedRight += 30;
-        imgClock02 = setInterval(moveImageRight, imgSpeedRight);
-    }">Auto Image Right Slower</button>
-    <button onclick="moveImageUp()">Move Image Up</button>
-    <button onclick="{
-        clearInterval(imgClock04);
-        imgSpeedUp = Math.max(10, imgSpeedUp - 30);
-        imgClock04 = setInterval(moveImageUp, imgSpeedUp);
-    }">Auto Image Up Faster</button>
-    <button onclick="{
-        clearInterval(imgClock04);
-        imgSpeedUp += 30;
-        imgClock04 = setInterval(moveImageUp, imgSpeedUp);
-    }">Auto Image Up Slower</button>
-    <button onclick="moveImageDown()">Move Image Down</button>
-    <button onclick="{
-        clearInterval(imgClock05);
-        imgSpeedDown = Math.max(10, imgSpeedDown - 30);
-        imgClock05 = setInterval(moveImageDown, imgSpeedDown);
-    }">Auto Image Down Faster</button>
-    <button onclick="{
-        clearInterval(imgClock05);
-        imgSpeedDown += 30;
-        imgClock05 = setInterval(moveImageDown, imgSpeedDown);
-    }">Auto Image Down Slower</button>
-</div>
-
-<!-- Reset Button -->
-<div class="button-section">
-    <button onclick="resetPositions()">Reset Positions</button>
-</div>
-
-<!-- Image Element -->
-<img id="myImage01" src="https://i.ibb.co/Zf7hHsh/OIP.jpg" alt="OIP">
 </body>
 </html>
