--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -75,8 +75,18 @@
     }
 
     function decryptText() {
-        alert('Sorry, you have to do this!');
-        // Add decryption logic here
+        let myTemp = '';
+        let myString = document.getElementById('myArea02').value.toLowerCase().split('');
+        for (let myLoop = 0; myLoop < myString.length; myLoop++) {
+            myTemp = myString[myLoop];
+            if (myString[myLoop] === 'f') {
+                myTemp = 'e';
+            } else if (myString[myLoop] === 'i') {
+                myTemp = 'h';
+            }
+            myString[myLoop] = myTemp;
+        }
+        document.getElementById('myArea03').value = myString.join('');
     }
 </script>
 
