--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -4,58 +4,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spy Name Encryptor</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #fff, #eaeaea);
+            height: 100vh;
             display: flex;
-            flex-direction: column;
+            justify-content: center;
             align-items: center;
-            background-color: #f9f9f9;
-            margin: 0;
-            padding: 20px;
+            padding: 0 20px;
         }
         h1 {
             color: #333;
-        }
-        textarea {
-            margin: 10px 0;
-            width: 90%;
-            max-width: 600px;
-            height: 80px;
-            font-size: 16px;
-            padding: 5px;
-        }
-        input[type=button] {
-            padding: 10px 15px;
-            font-size: 16px;
-            margin: 5px;
-            cursor: pointer;
-        }
-        input[type=button]:hover {
-            background-color: #007BFF;
-            color: white;
+            margin-bottom: 20px;
         }
         .container {
-            max-width: 600px;
+            background-color: #fefefe;
+            border-radius: 10px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+            max-width: 500px;
             width: 100%;
-            margin: auto;
+        }
+        textarea {
+            width: 100%;
+            height: 80px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 16px;
+            padding: 10px;
+            transition: border-color 0.3s ease;
+        }
+        textarea:focus {
+            border-color: #007BFF;
+            outline: none;
+        }
+        input[type=button] {
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            padding: 10px 15px;
+            font-size: 16px;
+            margin: 5px 0;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+        }
+        input[type=button]:hover {
+            background-color: #0056b3;
+        }
+        .icon {
+            margin-right: 8px;
         }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <h1 align="center">t2a20-spy-name.html</h1>
+    <h1><i class="fas fa-user-secret"></i> Spy Name Encryptor</h1>
     
-    <textarea id="myArea01" placeholder="Enter your text here...">Hello how are you</textarea><br>
+    <textarea id="myArea01" placeholder="Enter your text here...">Hello how are you</textarea>
 
-    <input type="button" value="Encrypt" onclick="encryptText()"><br><br>
+    <input type="button" value="Encrypt" onclick="encryptText()"><br>
 
-    <textarea id="myArea02" placeholder="Your encrypted text will appear here..."></textarea><br>
+    <textarea id="myArea02" placeholder="Your encrypted text will appear here..."></textarea>
 
-    <input type="button" value="Decrypt" onclick="decryptText()"><br><br>
+    <input type="button" value="Decrypt" onclick="decryptText()"><br>
 
-    <textarea id="myArea03" placeholder="Your decrypted text will appear here..."></textarea><br>
+    <textarea id="myArea03" placeholder="Your decrypted text will appear here..."></textarea>
 </div>
 
 <script>
