--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -4,80 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spy Name Encryptor</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <style>
         body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #fff, #eaeaea);
-            height: 100vh;
+            font-family: Arial, sans-serif;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
-            padding: 0 20px;
+            justify-content: center;
+            min-height: 100vh;
+            margin: 0;
+            background: url('https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&q=80&w=1080') no-repeat center center fixed;
+            background-size: cover;
+            color: white;
         }
         h1 {
-            color: #333;
-            margin-bottom: 20px;
-        }
-        .container {
-            background-color: #fefefe;
-            border-radius: 10px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-            padding: 30px;
-            max-width: 500px;
-            width: 100%;
+            color: #ffffff;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
         }
         textarea {
-            width: 100%;
-            height: 80px;
             margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+            width: 90%;
+            max-width: 600px;
+            height: 80px;
             font-size: 16px;
             padding: 10px;
-            transition: border-color 0.3s ease;
-        }
-        textarea:focus {
-            border-color: #007BFF;
-            outline: none;
+            border-radius: 5px;
+            border: none;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+            resize: none;
+            background-color: rgba(255, 255, 255, 0.9);
+            color: #333;
         }
         input[type=button] {
-            background-color: #007BFF;
-            color: white;
-            border: none;
             padding: 10px 15px;
             font-size: 16px;
-            margin: 5px 0;
-            border-radius: 5px;
+            margin: 5px;
             cursor: pointer;
-            transition: background-color 0.3s ease;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 100%;
+            border: none;
+            border-radius: 5px;
+            background-color: #007BFF;
+            color: white;
+            transition: background-color 0.3s, transform 0.3s;
         }
         input[type=button]:hover {
             background-color: #0056b3;
+            transform: translateY(-2px);
         }
-        .icon {
-            margin-right: 8px;
+        .container {
+            max-width: 700px;
+            width: 90%;
+            padding: 20px;
+            background: rgba(0, 0, 0, 0.7);
+            border-radius: 10px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.6);
         }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <h1><i class="fas fa-user-secret"></i> Spy Name Encryptor</h1>
+    <h1 align="center">t2a20-spy-name.html</h1>
     
-    <textarea id="myArea01" placeholder="Enter your text here...">Hello how are you</textarea>
+    <textarea id="myArea01" placeholder="Enter your text here...">Hello how are you</textarea><br>
 
-    <input type="button" value="Encrypt" onclick="encryptText()"><br>
+    <input type="button" value="Encrypt" onclick="encryptText()"><br><br>
 
-    <textarea id="myArea02" placeholder="Your encrypted text will appear here..."></textarea>
+    <textarea id="myArea02" placeholder="Your encrypted text will appear here..."></textarea><br>
 
-    <input type="button" value="Decrypt" onclick="decryptText()"><br>
+    <input type="button" value="Decrypt" onclick="decryptText()"><br><br>
 
-    <textarea id="myArea03" placeholder="Your decrypted text will appear here..."></textarea>
+    <textarea id="myArea03" placeholder="Your decrypted text will appear here..."></textarea><br>
 </div>
 
 <script>
