--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -8,34 +8,39 @@
         body {
             font-family: Arial, sans-serif;
             display: flex;
-            flex-direction: column;
-            align-items: center;
             justify-content: center;
+            align-items: center;
             height: 100vh;
-            background: linear-gradient(to right, #ff5733, #ffbd33, #33c6ff);
             margin: 0;
-            padding: 20px;
-            color: #fff;
+            background: linear-gradient(135deg, #6a5acd, #00bfff);
+            color: white;
         }
         h1 {
-            color: #fff;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+            text-align: center;
+            margin-bottom: 20px;
+            font-size: 2.5rem;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+        }
+        .container {
+            background: rgba(0, 0, 0, 0.7);
+            border-radius: 10px;
+            padding: 20px;
+            width: 90%;
+            max-width: 600px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
         }
         textarea {
             margin: 10px 0;
-            width: 90%;
-            max-width: 600px;
+            width: 100%;
             height: 80px;
             font-size: 16px;
             padding: 10px;
             border: none;
             border-radius: 5px;
-            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-            resize: none; /* Prevent resizing */
+            resize: none;
         }
         textarea:focus {
-            outline: none;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+            outline: 2px solid #00bfff;
         }
         input[type=button] {
             padding: 10px 15px;
@@ -44,36 +49,28 @@
             cursor: pointer;
             border: none;
             border-radius: 5px;
-            transition: background-color 0.2s, transform 0.2s;
+            background-color: #5a4fcf;
+            color: white;
+            transition: background-color 0.3s;
         }
         input[type=button]:hover {
-            background-color: rgba(255, 255, 255, 0.3);
-            color: #333;
-            transform: scale(1.05);
-        }
-        .container {
-            max-width: 600px;
-            width: 100%;
-            margin: auto;
-            padding: 20px;
-            background-color: rgba(0, 0, 0, 0.6); /* Slightly darkened background for contrast */
-            border-radius: 10px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+            background-color: #007BFF;
+            color: white;
         }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <h1 align="center">t2a20-spy-name.html</h1>
+    <h1>Spy Name Encryptor</h1>
     
     <textarea id="myArea01" placeholder="Enter your text here...">Hello how are you</textarea><br>
 
-    <input type="button" value="Encrypt" onclick="encryptText()"><br><br>
+    <input type="button" value="Encrypt" onclick="encryptText()"><br>
 
     <textarea id="myArea02" placeholder="Your encrypted text will appear here..."></textarea><br>
 
-    <input type="button" value="Decrypt" onclick="decryptText()"><br><br>
+    <input type="button" value="Decrypt" onclick="decryptText()"><br>
 
     <textarea id="myArea03" placeholder="Your decrypted text will appear here..."></textarea><br>
 </div>
