--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -68,7 +68,7 @@
 <div class="container">
     <h1 align="center">Spy Name Encryptor</h1>
     
-    <textarea id="myArea01" placeholder="Enter your text here...">Hello how are you</textarea><br>
+    <textarea id="myArea01" placeholder="Enter your text here...">Cheese Burger</textarea><br>
 
     <input type="button" value="Encrypt" onclick="encryptText()"><br><br>
 
